-
Bug
-
Resolution: Done
-
P0: Blocker
-
Qt Creator 3.3.0-beta1
-
None
Two reported issues with gradle for the Qt 5.4.0 RC:
1. Build error on Linux: "Invalid revision: android-4.4W"
2. On Windows, Qt Quick Controls applications cannot be deployed due to the maximum path length limitation.
Both issues can be worked around by turning off Gradle in Qt Creator, so a quick solution for this would be to make ant the default for this version and then revisit Gradle later once we can figure out how to fix the issues.
- is required for
-
QTBUG-41613 Issues to be fixed before 5.4.0 RC
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-13470 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
100402,2 | Android: Don't default to gradle | 3.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |