Android: Don't default to gradle

There are numerous problems with gradle, so for now switch the default
to off.

Task-number: QTCREATORBUG-13470
Change-Id: I9d2fc216c91656a528875a0bc3b820d4f289b9b0
Reviewed-by: BogDan Vatra <bogdan@kde.org>